@@ -1,6 +1,10 @@
 ChangeLog
 =
 * ttk.git
+- optional mask array for constrained smoothing
+- bug fixes in DiscreteGradient
+- bug fixes in TopologicalSimplification
+- code cleaning
 
 * 0.9.2
 - Updates for ParaView-5.4.0
